--- a/WebApplication2/WebApplication2/Views/Account/Login.cshtml
+++ b/WebApplication2/WebApplication2/Views/Account/Login.cshtml
@@ -1,50 +1,49 @@
-﻿@using WebApplication2.Models
-@model LoginViewModel
+﻿@model WebApplication2.Models.Users
+
 @{
-    ViewBag.Title = "Log in";
+    ViewBag.Title = "Login";
 }
 
-<h2>@ViewBag.Title</h2>
-<div class="row">
+<h2>Login</h2>
 
-    <section id="loginForm">
+
+@using (Html.BeginForm()) 
+{
+    @Html.AntiForgeryToken()
+    
+    <div class="form-horizontal">
+        <h4>Users</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         
-        @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-        {
-            @Html.AntiForgeryToken()
-            @Html.ValidationSummary(true, "", new {@class = "text-danger"})
-            <div class="form-group">
-                @Html.LabelFor(m => m.Email, new {@class = "col-md-2 control-label"})
-                <div class="col-md-10">
-                    @Html.TextBoxFor(m => m.Email, new {@class = "form-control"})
-                    @Html.ValidationMessageFor(m => m.Email, "", new {@class = "text-danger"})
-                </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Nick, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Nick, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Nick, "", new { @class = "text-danger" })
             </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.Password, new {@class = "col-md-2 control-label"})
-                <div class="col-md-10">
-                    @Html.PasswordFor(m => m.Password, new {@class = "form-control"})
-                    @Html.ValidationMessageFor(m => m.Password, "", new {@class = "text-danger"})
-                </div>
+        </div>
+
+        
+        <div class="form-group">
+            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
             </div>
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <div class="checkbox">
-                        @Html.CheckBoxFor(m => m.RememberMe)
-                        @Html.LabelFor(m => m.RememberMe)
-                    </div>
-                </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Login" class="btn btn-default" />
             </div>
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Log in" class="btn btn-default"/>
-                </div>
-            </div>
-            <p>
-                @Html.ActionLink("Register as a new user", "Register")
-            </p>
-        }
-    </section>
+        </div>
+    </div>
+}
+
+<div>
+    @Html.ActionLink("Back to List", "Index")
 </div>
 
 @section Scripts {
