--- a/WebApplication2/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/WebApplication2/Views/Home/Index.cshtml
@@ -5,9 +5,10 @@
 <div class="jumbotron">
     <h1 align="center">Welcome at online fitness training Website</h1>
     <p class="lead">Here you can meet best fitness coache, who will help impreve yourself!</p>
-   
+  
+
 </div>
 <div>
-    <img class="img-responsive" src="../resources/pictureHome.jpg" alt="">
+    <img class="img-responsive" src="../resources/pictureHome.jpg" alt="">\
 </div>
 
