--- a/WebApplication2/WebApplication2/Views/Trainer/ExcerciseList.cshtml
+++ b/WebApplication2/WebApplication2/Views/Trainer/ExcerciseList.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<WebApplication2.Models.Exercise>
 
 @{
-    ViewBag.Title = "ExcerciseList";
+    ViewBag.Title = "Excercise List";
 }
 
-<h2>ExcerciseList</h2>
+<h2>Excercise List</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    <button id="create">Create</button>
 </p>
 <table class="table">
     <tr>
@@ -21,13 +21,17 @@
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ExerciseId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ExerciseId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ExerciseId })
-        </td>
+        </td>        
     </tr>
 }
 
 </table>
+<div id="someDiv">
+</div>
+<script>
+    document.getElementById("create").onclick = function () { myFunction() };
+    function myFunction() {
+        $("#someDiv").load('@Url.Action("CreateExcercise", "Trainer")');
+        $('#create').hide();
+    }
+</script>
