--- a/WebApplication2/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/WebApplication2/Views/Home/Index.cshtml
@@ -9,6 +9,6 @@
 
 </div>
 <div>
-    <img class="img-responsive" src="../resources/pictureHome.jpg" alt="">
+    <img class="img-responsive" src="../resources/pictureHome.jpg" alt="">\
 </div>
 
