--- a/WebApplication2/WebApplication2/Views/Shared/_Layout.cshtml
+++ b/WebApplication2/WebApplication2/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                     @if (Session["UserID"] != null)
                     {
                         <li>@Html.ActionLink("Excercises", "ExcerciseList", "Trainer")</li>
+                        <li>@Html.ActionLink("Training Plans", "TrainingPlanList", "Trainer")</li>
                     }
                     else
                     {
