--- a/WebApplication2/WebApplication2/Views/Trainer/TrainingTypeList.cshtml
+++ b/WebApplication2/WebApplication2/Views/Trainer/TrainingTypeList.cshtml
@@ -1,11 +1,6 @@
-﻿@model IEnumerable<WebApplication2.Models.Exercise>
+﻿@model IEnumerable<WebApplication2.Models.TrainingType>
 
-@{
-    ViewBag.Title = "Excercise List";
-}
-
-<h2>Excercise List</h2>
-
+<br/>
 <p>
     <button id="create">Create</button>
 </p>
@@ -13,6 +8,9 @@
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Description)
         </th>
         <th></th>
     </tr>
@@ -23,16 +21,20 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
-        </tr>
-    }
-
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+        </tr>}
 </table>
+<p>
+    @Html.ActionLink("Back", "TrainingPlanList")
+</p>
 <div id="someDiv">
 </div>
 <script>
     document.getElementById("create").onclick = function () { myFunction() };
     function myFunction() {
-        $("#someDiv").load('@Url.Action("CreateExcercise", "Trainer")');
+        $("#someDiv").load('@Url.Action("TrainingTypeCreate", "Trainer")');
         $('#create').hide();
     }
 </script>
