--- a/WebApplication2/WebApplication2/Views/Trainer/TrainingPlanList.cshtml
+++ b/WebApplication2/WebApplication2/Views/Trainer/TrainingPlanList.cshtml
@@ -3,7 +3,7 @@
 <h2>Training Plans</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")      
+    @Html.ActionLink("Create New", "CreatePlan")      
     @Html.ActionLink("Training type manager", "TrainingTypeList")
 </p>
 <table class="table">
