--- a/WebApplication2/WebApplication2/Views/Trainer/CreatePlan.cshtml
+++ b/WebApplication2/WebApplication2/Views/Trainer/CreatePlan.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication2.Models.TrainingPlan
+﻿@model WebApplication2.Models.PlanTpeViewModel
 
 @using (Html.BeginForm()) 
 {
@@ -9,18 +9,18 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.Type, "Type", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Plan.Type, "Type", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.Type, ViewBag.TrainingType as SelectList)
-                @Html.ValidationMessageFor(model => model.Type, "", new { @class = "text-danger" })                
+                @Html.DropDownListFor(model => model.Plan.Type, Model.DropDownItems)
+                @Html.ValidationMessageFor(model => model.Plan.Type, "", new { @class = "text-danger" })                
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Level, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Plan.Level, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Level, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Level, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Plan.Level, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Plan.Level, "", new { @class = "text-danger" })
             </div>
         </div>
 
