--- a/WebApplication2/WebApplication2/Views/Trainer/TrainingPlanList.cshtml
+++ b/WebApplication2/WebApplication2/Views/Trainer/TrainingPlanList.cshtml
@@ -41,8 +41,8 @@
             <td>
                 @if (Session["UserID"].ToString().Equals(item.Coach+""))
                 {
-                    @Html.ActionLink("Edit", "Edit", new {id = item.PlanId}) 
-                    @Html.ActionLink("Delete", "Delete", new {id = item.PlanId})
+                    @Html.ActionLink("Edit", "EditPlan", new { planId = item.PlanId}) 
+                    @Html.ActionLink("Delete", "Delete", new { planId = item.PlanId})
                 }
             </td>
         </tr>
