--- a/WebApplication2/WebApplication2/Views/Trainer/EditPlan.cshtml
+++ b/WebApplication2/WebApplication2/Views/Trainer/EditPlan.cshtml
@@ -32,5 +32,14 @@
             </td>
         }
     </tr>
-
 </table>
+<button id="create">Create</button>
+<div id="someDiv">
+</div>
+<script>
+    document.getElementById("create").onclick = function () { myFunction() };
+    function myFunction() {
+        $("#someDiv").load('@Url.Action("AddExcerciseToPlan", "Trainer", new { id = Model.IdPlanu })');
+        $('#create').hide();
+    }
+</script>
