--- a/WebApplication2/WebApplication2/Views/Client/TrainingPlan.cshtml
+++ b/WebApplication2/WebApplication2/Views/Client/TrainingPlan.cshtml
@@ -3,6 +3,7 @@
 
 <h2>My training plan</h2>
 
+@Html.ActionLink("Choos diffrent plan", "UnSelectPlan", "Client")
 <table>
     <tr>
         <th>Monday</th>
