--- a/WebApplication2/WebApplication2/Views/Client/AddMyInformations.cshtml
+++ b/WebApplication2/WebApplication2/Views/Client/AddMyInformations.cshtml
@@ -64,10 +64,18 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ThighCircumference, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ThighCircumference, htmlAttributes: new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ThighCircumference, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ThighCircumference, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.ThighCircumference, new {htmlAttributes = new {@class = "form-control"}})
+                @Html.ValidationMessageFor(model => model.ThighCircumference, "", new {@class = "text-danger"})
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -80,5 +88,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "ResultsList")
+    @Html.ActionLink("Back to List", "ResultsList", "Shared")
 </div>
