--- a/WebApplication2/WebApplication2/Views/Trainer/ClientsList.cshtml
+++ b/WebApplication2/WebApplication2/Views/Trainer/ClientsList.cshtml
@@ -29,7 +29,8 @@
             @Html.DisplayFor(modelItem => item.DateOfBirth)
         </td>
         <td>
-            @Html.ActionLink("Details", "ResultsList","Shared" ,new {id = item.UsserId}, "") |
+            @Html.ActionLink("Details", "ResultsList", "Shared", new {id = item.UsserId}, "") |
+            @Html.ActionLink("Messenger", "Messanger", "Shared", new { id2 = item.UsserId }, "")
         </td>
     </tr>
 }
