--- a/WebApplication2/WebApplication2/Views/Trainer/TrainingPlanList.cshtml
+++ b/WebApplication2/WebApplication2/Views/Trainer/TrainingPlanList.cshtml
@@ -29,7 +29,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.PlanId)
             </td>
-            <td>
+            <td title="@item.TrainingType.Description">
                 @Html.DisplayFor(modelItem => item.TrainingType.Name)
             </td>
             <td>
