--- a/WebApplication2/WebApplication2/Views/Shared/Messanger.cshtml
+++ b/WebApplication2/WebApplication2/Views/Shared/Messanger.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebApplication2.Models.Messages>
+﻿@model WebApplication2.Models.ViewModels.MessangerViewModel
 
 @{
     ViewBag.Title = "Messanger";
@@ -6,52 +6,58 @@
 
 <h2>Messanger</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.SenderId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ReciverId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Date)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IsRead)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Text)
-        </th>
-        <th></th>
-    </tr>
+    @foreach (var item in Model.Messages)
+    {
+        if (item.SenderId == int.Parse(Session["UserID"].ToString()))
+        {
+            <tr>
+                <td title="@item.Date">
+                    @Html.DisplayFor(modelItem => item.Text)
+                </td>
+                <td></td>
+                
+            </tr>
+        }
+        else
+        {
+            <tr>
+                <td></td>
+                <td title="@item.Date" style="background: lightblue;">
+                    @Html.DisplayFor(modelItem => item.Text)
+                </td>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.SenderId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ReciverId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Date)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IsRead)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Text)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.MessageId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.MessageId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.MessageId })
-        </td>
-    </tr>
-}
-
+            </tr>
+        }
+    }
 </table>
+<div>
+    @using (Html.BeginForm())
+    {
+        <table>
+            <tr>
+                <td>
+                    @Html.ValidationSummary(true, "", new {@class = "text-danger"})
+
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model, htmlAttributes: new {@class = "control-label col-md-2"})
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.NewMessage.Text, new {htmlAttributes = new {@class = "form-control"}})
+                            @Html.ValidationMessageFor(model => model.NewMessage.Text, "", new {@class = "text-danger"})
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <input type="submit" value="Create" class="btn btn-default"/>
+                        </div>
+                    </div>
+
+                </td>
+                <td>
+
+                </td>
+            </tr>
+        </table>
+    }
+</div>
