--- a/WebApplication2/WebApplication2/Views/Trainer/CreatePlan.cshtml
+++ b/WebApplication2/WebApplication2/Views/Trainer/CreatePlan.cshtml
@@ -19,7 +19,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Plan.Level, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Plan.Level, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Plan.Level, new { htmlAttributes = new { min = 0, max = 5 } })
                 @Html.ValidationMessageFor(model => model.Plan.Level, "", new { @class = "text-danger" })
             </div>
         </div>
