--- a/WebApplication2/WebApplication2/Views/Trainer/_TrainingSession.cshtml
+++ b/WebApplication2/WebApplication2/Views/Trainer/_TrainingSession.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WebApplication2.Models.ViewModels.SessionInPlanViewModel
 
 
-<table>
+<table class="table table-bordered">
     <tr>
         <td>ExerciseId</td>
         <td>Series</td>
