--- a/WebApplication2/WebApplication2/Views/Client/ChoosPlan.cshtml
+++ b/WebApplication2/WebApplication2/Views/Client/ChoosPlan.cshtml
@@ -5,6 +5,10 @@
 }
 
 <h2>Choos Plan</h2>
+<div>
+    We can help you choos plan!
+    @Html.ActionLink("HELP!", "PlanHelper")
+</div>
 
 <table class="table">
     <tr>
